--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".SimChangeReceiver"
+        <receiver android:name=".receiver.SimChangeReceiver"
             android:exported="true"
-            android:enabled="true"
-            android:priority="999">
+            android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.SIM_STATE_CHANGED" />
             </intent-filter>
