condition added for sim count

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".receiver.SimChangeReceiver"
-            android:exported="true"
-            android:enabled="true">
-            <intent-filter>
-                <action android:name="android.intent.action.SIM_STATE_CHANGED" />
-            </intent-filter>
-        </receiver>
+<!--        <receiver android:name=".receiver.SimChangeReceiver"-->
+<!--            android:exported="true"-->
+<!--            android:enabled="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.SIM_STATE_CHANGED" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
 
     </application>
 
